Modify public/index.html. Add empty 'videos-container' element.

--- a/public/index.html
+++ b/public/index.html
@@ -12,15 +12,7 @@
         <img src="img/logo.svg" alt="">
       </div>
     </div>
-    <div class="contents-container">
-      <div class="video-card">
-        <div class="video-player">
-            <iframe class="video-player" src="https://www.youtube.com/embed/6lutNECOZFw" frameborder="0" allowfullscreen></iframe>
-        </div>
-        <div class="video-title">
-          Excited train guy, New York!
-        </div>
-      </div>
+    <div class="contents-container" id="videos-container">
     </div>
   </body>
 </html>
