--- a/public/index.html
+++ b/public/index.html
@@ -14,5 +14,11 @@
     </div>
     <div class="contents-container" id="videos-container">
     </div>
+
+    <a href="/videos/create.html">
+      <div class="add-video-button">
+        <p>Add Video</p>
+      </div>
+    </a>
   </body>
 </html>
