Add form and input controls to save video page

--- a/public/videos/create.html
+++ b/public/videos/create.html
@@ -15,5 +15,13 @@
     <div>
         <h2>Save a video</h2>
     </div>
+    <div>
+      <form>
+        <input type="text" id="title-input" placeholder="Title"/>
+        <input type="text" id="videoUrl-input" placeholder="Video URL"/>
+        <textarea id="description-input" placeholder="Description"></textarea>
+        <button type="submit" id="submit-button">Save video</button>
+      </form>
+    </div>
   </body>
 </html>
