Add 'method' and 'action' attributes to form in Save Video page

--- a/public/videos/create.html
+++ b/public/videos/create.html
@@ -16,7 +16,7 @@
         <h2>Save a video</h2>
     </div>
     <div>
-      <form>
+      <form method="post" action="/videos">
         <input type="text" id="title-input" placeholder="Title"/>
         <input type="text" id="videoUrl-input" placeholder="Video URL"/>
         <textarea id="description-input" placeholder="Description"></textarea>
