Add name attribute to form input controls in 'create.html'

--- a/public/videos/create.html
+++ b/public/videos/create.html
@@ -17,9 +17,9 @@
     </div>
     <div>
       <form method="post" action="/videos">
-        <input type="text" id="title-input" placeholder="Title"/>
-        <input type="text" id="videoUrl-input" placeholder="Video URL"/>
-        <textarea id="description-input" placeholder="Description"></textarea>
+        <input type="text" id="title-input" name="title" placeholder="Title"/>
+        <input type="text" id="videoUrl-input" name="videoUrl" placeholder="Video URL"/>
+        <textarea id="description-input" name="description" placeholder="Description"></textarea>
         <button type="submit" id="submit-button">Save video</button>
       </form>
     </div>
